SG-15122 Fixes for side bar wrapping issues (#13)
Made the sidebar and content slightly wider. Fixed the indentation of wrapped menu items. Fixed a jump in the menu during page resize.

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -26,7 +26,7 @@
   @include mq(md) {
     flex-wrap: nowrap;
     position: absolute;
-    width: $nav-width + 16px;
+    width: $nav-width;
     height: 100%;
     padding-top: $gutter-spacing * 2;
     padding-bottom: 0;
@@ -37,7 +37,7 @@
 
   @include mq(lg) {
     width: calc((100% - #{$nav-width + $content-width}) / 2 + #{$nav-width});
-    min-width: $nav-width - 50;
+    min-width: $nav-width;
   }
 }
 
@@ -101,10 +101,15 @@
 
   @include container;
 
-  width: 100%;
+  // Override the container padding to keep it constant
+  @include mq(sm) {
+    padding-left: $sp-5;
+    padding-right: $sp-5;
+  }
 
-  @include mq(lg) {
-    width: $nav-width + 32px;
+  width: 100%;
+  @include mq(md){
+    width: $nav-width;
   }
 }
 
