--- a/_sass/support/_variables.scss
+++ b/_sass/support/_variables.scss
@@ -118,8 +118,8 @@ $border-color: $grey-lt-100 !default;
 
 $gutter-spacing: $sp-6 !default;
 $gutter-spacing-sm: $sp-4 !default;
-$nav-width: 200px !default;
-$content-width: 675px !default;
+$nav-width: 255px !default;
+$content-width: 900px !default;
 
 $media-queries: (
   xs: 320px,
